[tool.poetry]
name = "telegram-support-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "telegram_support_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.14"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
